[package]
name = "trustlog"
version = "0.1.0"
authors = ["arctan95 <jaeqentan@gmail.com>"]
edition = "2021"

[workspace]
members = [
  ".",
  "lib/opentelemetry-proto", "lib/trustlog-common",
  "lib/trustlog-lib",
  "lib/trustlog-common",
]

[workspace.dependencies]
chrono = { version = "0.4.34", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.5.3", default-features = false, features = ["derive", "error-context", "env", "help", "std", "string", "usage", "wrap_help"] }
indexmap = { version = "2.2.5", default-features = false, features = ["serde", "std"] }
pin-project = { version = "1.1.5", default-features = false }
proptest = "1.4"
proptest-derive = "0.4.0"
serde_json = { version = "1.0.114", default-features = false, features = ["raw_value", "std"] }
serde = { version = "1.0.197", default-features = false, features = ["alloc", "derive", "rc"] }
toml = { version = "0.8.12", default-features = false, features = ["display", "parse"] }

[build-dependencies]
prost-build = { version = "0.12", default-features = false, optional = true }
tonic-build = { version = "0.10", default-features = false, features = ["transport", "prost"], optional = true }
openssl-src = { version = "300", default-features = false, features = ["force-engine", "legacy"] }

[dependencies]
# Internal libs
trustlog-lib = { path = "lib/trustlog-lib", default-features = false, features = ["opentelemetry"] }

# Serde
serde.workspace = true
serde-toml-merge = { version = "0.3.6", default-features = false }
serde_bytes = { version = "0.11.14", default-features = false, features = ["std"], optional = true }
serde_json.workspace = true
serde_with = { version = "3.7.0", default-features = false, features = ["macros", "std"] }
serde_yaml = { version = "0.9.33", default-features = false }

# Tower
tower = { version = "0.4.13", default-features = false, features = ["buffer", "limit", "retry", "timeout", "util", "balance", "discover"] }
tower-http = { version = "0.4.4", default-features = false, features = ["decompression-gzip", "trace"]}

# Tokio / Futures
async-stream = { version = "0.3.5", default-features = false }
async-trait = { version = "0.1.73", default-features = false }
futures = { version = "0.3.28", default-features = false, features = ["compat", "io-compat"], package = "futures" }
tokio = { version = "1.32.0", default-features = false, features = ["full"] }
tokio-openssl = { version = "0.6.3", default-features = false }
tokio-stream = { version = "0.1.14", default-features = false, features = ["net", "sync", "time"] }
tokio-util = { version = "0.7", default-features = false, features = ["io", "time"] }
console-subscriber = { version = "0.1.10", default-features = false, optional = true }

# Tracing
tracing = { version = "0.1.34", default-features = false }
tracing-core = { version = "0.1.26", default-features = false }
tracing-futures = { version = "0.2.5", default-features = false, features = ["futures-03"] }
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["ansi", "env-filter", "fmt", "json", "registry", "tracing-log"] }

# Prost / Protocol Buffers
prost = { version = "0.12", default-features = false, features = ["std", "prost-derive"] }
prost-reflect = { version = "0.12", default-features = false, optional = true }
prost-types = { version = "0.12", default-features = false, optional = true }

# External libs
bytes = { version = "1.5.0", default-features = false, features = ["serde"] }
bytesize = { version = "1.3.0", default-features = false }
hostname = { version = "0.3.1", default-features = false }
http = { version = "0.2.9", default-features = false }
http-serde = "1.1.3"
http-body = { version = "0.4.5", default-features = false }
hex = { version = "0.4.3", default-features = false}
sha2 = { version = "0.10.8", default-features = false, optional = true }
tonic = { version = "0.10", default-features = false, features = ["transport", "codegen", "prost", "tls", "tls-roots", "gzip"] }
