[package]
name = "trustlog-lib"
version = "0.1.0"
authors = ["arctan95 <jaeqentan@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
opentelemetry-proto = { path = "../opentelemetry-proto", optional = true }
trustlog-common = { path = "../trustlog-common" }

[features]
opentelemetry = ["dep:opentelemetry-proto"]
